--- a/Gym/Gym/Views/GymClasses/Details.cshtml
+++ b/Gym/Gym/Views/GymClasses/Details.cshtml
@@ -41,9 +41,19 @@
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.AttendingMembers)
+        </dt>
+        @foreach (var AttendingMember in Model.AttendingMembers)
+        {
+            <dd>
+                @AttendingMember.Email
+            </dd>
+        }
 
     </dl>
 </div>
+
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
