--- a/Gym/Gym/Views/GymClasses/Index.cshtml
+++ b/Gym/Gym/Views/GymClasses/Index.cshtml
@@ -26,7 +26,8 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in Model)
+{
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
@@ -41,12 +42,23 @@
             @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
-            @Html.ActionLink("Attend", "BookingToggle", new { id = item.Id }) |
+            @if (User.Identity.IsAuthenticated)
+            {
+              
+                @Html.ActionLink("Details", "Details", new { id = item.Id })<span> |</span>
+             
+                @Html.ActionLink("Attend", "BookingToggle", new { id = item.Id })
+               }
+
+            @*else if(User.IsInRole("admin"))
+            { 
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id })<span> |</span>
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id })<span> |</span>
+            @Html.ActionLink("Attend", "BookingToggle", new { id = item.Id })
+
+            }*@
         </td>
-    </tr>
+</tr>
 }
 
 </table>
