--- a/Gym/Gym/Views/GymClasses/Index.cshtml
+++ b/Gym/Gym/Views/GymClasses/Index.cshtml
@@ -5,10 +5,12 @@
 }
 
 <h2>Index</h2>
-
+@if (User.IsInRole("admin"))
+{
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+}
 <table class="table">
     <tr>
         <th>
@@ -46,17 +48,20 @@
             {
               
                 @Html.ActionLink("Details", "Details", new { id = item.Id })<span> |</span>
-             
-                @Html.ActionLink("Attend", "BookingToggle", new { id = item.Id })
-               }
+                @Html.ActionLink("Attend", "BookingToggleAttend", new { id = item.Id })<span> |</span>
+                @Html.ActionLink("Cancel", "BookingToggleCancel", new { id = item.Id })<span> |</span>
 
-            @*else if(User.IsInRole("admin"))
+
+            }
+
+            @if(User.IsInRole("admin"))
             { 
             @Html.ActionLink("Edit", "Edit", new { id = item.Id })<span> |</span>
             @Html.ActionLink("Delete", "Delete", new { id = item.Id })<span> |</span>
-            @Html.ActionLink("Attend", "BookingToggle", new { id = item.Id })
+            @Html.ActionLink("Attend", "BookingToggleAttend", new { id = item.Id })
+            @Html.ActionLink("Cancel", "BookingToggleCancel", new { id = item.Id })<span> |</span>
 
-            }*@
+            }
         </td>
 </tr>
 }
